# rust-web

./: Cargo.toml  Readme_Notes.md  configs.yml  exampleQuestions.json  log4rs.yaml  readme.MD  rust-toolchain.toml
src/: main.rs
src/config/: configs.rs
src/handle_errors/: Cargo.toml  handle_errors.rs  mod.rs
src/handlers/: handler.rs
src/minimal_http/: http_call.rs  minimal_main.rs  mod.rs
src/models/: error.rs  mod.rs  page.rs  question.rs
src/playground/: ex1.rs
src/routes/: authentication.rs  handler.rs  mod.rs  questions.rs
src/storage/: store.rs
src/types/: account.rs  answer.rs  error.rs  mod.rs  pagination.rs  question.rs  server_ip.rs
src/utils/: funcs.rs
