[package]
name = "rust-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
handle_errors = { path = "src/handle_errors" }
#log = "0.4"
#env_logger = "0.9"
#log4rs = "1.0"
chrono = "0.4.41"
uuid = { version = "0.8", features = ["v4"] }
tracing = {version = "0.1", features = ["log"] }
tracing-subscriber = {version = "0.3",  features = ["env-filter", "fmt"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "migrate", "postgres", "sqlite"] }
hyper = { version = "0.14", features = ["full"] }